--- a/angular1/app/billingCycle/form.html
+++ b/angular1/app/billingCycle/form.html
@@ -6,13 +6,43 @@
     model="bcCtrl.billingCycle.month" readonly="bcCtrl.tabDelete"></field>
     <field id="year" label="Ano" grid="12 6 4" placeholder="Informe o Ano" type="number"
     model="bcCtrl.billingCycle.year" readonly="bcCtrl.tabDelete"></field>
+
+    <div class="col-xs-12">
+      <fieldset>
+        <legend>Resumo</legend>
+        <div ng-include="'billingCycle/summary.html'">
+
+        </div>
+      </fieldset>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <fieldset>
+        <legend>Créditos</legend>
+        <div ng-include="'billingCycle/creditList.html'">
+
+        </div>
+      </fieldset>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <fieldset>
+        <legend>Débitos</legend>
+        <div ng-include="'billingCycle/debtList.html'">
+
+        </div>
+      </fieldset>
+    </div>
+
   </div>
   <div class="box-footer">
     <button type="button" class="btn btn-primary" ng-click="bcCtrl.create()"
     ng-if="bcCtrl.tabCreate">Incluir</button>
-    <button type="button" class="btn btn-info" ng-if="bcCtrl.tabUpdate">Alterar</button>
+    <button type="button" class="btn btn-info" ng-if="bcCtrl.tabUpdate"
+    ng-click="bcCtrl.update()">Alterar</button>
     <button type="button" class="btn btn-danger" ng-if="bcCtrl.tabDelete"
     ng-click="bcCtrl.delete()">Excluir</button>
-    <button type="button" class="btn btn-default" ng-click="bcCtrl.refresh()">Cancelar</button>
+    <button type="button" class="btn btn-default"
+    ng-click="bcCtrl.refresh()">Cancelar</button>
   </div>
 </div>
