--- a/angular1/app/billingCycle/creditList.html
+++ b/angular1/app/billingCycle/creditList.html
@@ -15,18 +15,18 @@
         </td>
         <td>
           <input ng-model="credit.value" class="form-control" placeholder="Informe o Valor"
-          ng-readony="bcCtrl.tabDelete" type="number">
+           ng-change="bcCtrl.calculateValues()" ng-readony="bcCtrl.tabDelete" type="number">
         </td>
         <td class="table-actions">
-          <button type="button" class="btn btn-success" ng-class={disabled: bcCtrl.tabDelete}
+          <button type="button" class="btn btn-success" ng-disabled="bcCtrl.tabDelete"
           ng-click="bcCtrl.addCredit($index)">
             <i class="fa fa-plus"></i>
           </button>
-          <button type="button" class="btn btn-warning" ng-class={disabled: bcCtrl.tabDelete}
+          <button type="button" class="btn btn-warning" ng-disabled="bcCtrl.tabDelete"
           ng-click="bcCtrl.cloneCredit($index, credit)">
             <i class="fa fa-clone"></i>
           </button>
-          <button type="button" class="btn btn-danger" ng-class={disabled: bcCtrl.tabDelete}
+          <button type="button" class="btn btn-danger" ng-disabled="bcCtrl.tabDelete"
           ng-click="bcCtrl.deleteCredit($index)">
             <i class="fa fa-trash-o"></i>
           </button>
