--- a/angular1/app/billingCycle/debtList.html
+++ b/angular1/app/billingCycle/debtList.html
@@ -16,22 +16,22 @@
         </td>
         <td>
           <input ng-model="debt.value" class="form-control" placeholder="Informe o Valor"
-          ng-readony="bcCtrl.tabDelete" type="number">
+          ng-change="bcCtrl.calculateValues()" ng-readony="bcCtrl.tabDelete" type="number">
         </td>
         <td>
           <input ng-model="debt.status" class="form-control" placeholder="Informe o Status"
           ng-readony="bcCtrl.tabDelete">
         </td>
         <td class="table-actions">
-          <button type="button" class="btn btn-success" ng-class={disabled: bcCtrl.tabDelete}
+          <button type="button" class="btn btn-success" ng-disabled="bcCtrl.tabDelete"
           ng-click="bcCtrl.addDebt($index)">
             <i class="fa fa-plus"></i>
           </button>
-          <button type="button" class="btn btn-warning" ng-class={disabled: bcCtrl.tabDelete}
+          <button type="button" class="btn btn-warning" ng-disabled="bcCtrl.tabDelete"
           ng-click="bcCtrl.cloneDebt($index, debt)">
             <i class="fa fa-clone"></i>
           </button>
-          <button type="button" class="btn btn-danger" ng-class={disabled: bcCtrl.tabDelete}
+          <button type="button" class="btn btn-danger" ng-disabled="bcCtrl.tabDelete"
           ng-click="bcCtrl.deleteDebt($index)">
             <i class="fa fa-trash-o"></i>
           </button>
