--- a/angular1/app/billingCycle/list.html
+++ b/angular1/app/billingCycle/list.html
@@ -10,16 +10,18 @@
     </thead>
     <tbody>
       <tr ng-repeat="billingCycle in bcCtrl.billingCycles">
-<td>{{ billingCycle.name }}</td>
-<td>{{ billingCycle.month }}</td>
-<td>{{ billingCycle.year }}</td>
-<td class="table-actions">
-<button type="button" class="btn btn-warning" ng-click="bcCtrl.showTabUpdate(billingCycle)">
-  <i class="fa fa-pencil"></i></button>
-<button type="button" class="btn btn-danger" ng-click="bcCtrl.showTabDelete(billingCycle)"
-><i class="fa fa-trash-o"></i></button>
-</td>
+        <td>{{:: billingCycle.name }}</td>
+        <td>{{:: billingCycle.month }}</td>
+        <td>{{:: billingCycle.year }}</td>
+        <td class="table-actions">
+          <button type="button" class="btn btn-warning" ng-click="bcCtrl.showTabUpdate(billingCycle)">
+            <i class="fa fa-pencil"></i></button>
+          <button type="button" class="btn btn-danger" ng-click="bcCtrl.showTabDelete(billingCycle)"><i class="fa fa-trash-o"></i></button>
+        </td>
       </tr>
     </tbody>
   </table>
+  <div class="box-footer clearfix">
+    <paginator url="/#/billingCycles" pages="{{ bcCtrl.pages }}"></paginator>
+  </div>
 </div>
